Revision history for Perl extension Puzzle.

0.18
	- Now it's possible to select which DBIx::Class relationship to add automatically to args
	- Solved a bug in Args and Post
    - Add a global static instance method to retrieve current Puzzle instance from outside components.
	- Now isGid template function works.

0.17 Wed Jan  2 16:33:16 CET 2013
	- Fix a static error code. Now Puzzle::Exception used.
	- In Puzzle::Args, now we accept key => DBIx::Class::Resultset where key superset default table name key
	- We now follow db relationships in creating template args.

0.16 Fri Dec 21 12:02:43 CET 2012
    - Some optimization in building parameters for template
	- Puzzle::Args::set now accept only permitted structure (scalar, hashref,...)
	- Puzzle::Args::set now accept DBIx::Class::Resultset and DBIx::Class::Row using Template converter to automatically convert it in a template complatible structure
	- Add a return 0 to raise exception function
	- Some optimization in Puzzle::Template::DBIxClassConverter

0.15 Wed Dec 19 15:24:56 CET 2012
    - Add a Template Converter to automatically include DBIx::Class resultset and rows in the Template.
	- Solved a bug in Template.pm

0.14 Tue dic 18 18:21:18 CET 2012
	- Add exception_file configuration parameter to set a default web page to print exceptions
	- Some optimization in language selection manager
	- Compatibility problem in yaml translation language file. Now translations MUST BE hashs of "t" key. Add t: to you previous yaml file and indent all keys.
	- Add Puzzle::Exception to raise html errors.

0.13 Tue Dec 18 11:38:16 CET 2012
	- All Mason parameters are now configurable by httpd.conf
	- Solved a bug in language files.

0.12 Mon Dec 17 12:35:00 CET 2012
	- Add support to detect mobile browser and support for .mobile.htt file
	- Add support to yaml translation language file

0.11 Wed Dec 12 10:50:30 CET 2012
	- Add support for http-equiv="refresh" meta tag that now it's added in building page if present in a block