@@ -23,7 +23,7 @@ lib/Puzzle/Core.pm
 lib/Puzzle/Page.pm    
 lib/Puzzle/Request.pm    
 lib/Puzzle/Template.pm
-lib/Puzzle/Template/DBIxClassConverter.pm
+lib/Puzzle/DBIx/ClassConverter.pm
 lib/Puzzle/DBIx/Column.pm
 lib/Puzzle/DBIx/Iterator.pm
 lib/Puzzle/DBIx/sysMetaschema.pm
